<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/dialog_input_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:text="请输入"/>

    <TextView
        android:id="@+id/dialog_start_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:gravity="left"
        android:text="@string/ui_base_begin"/>

    <EditText
        android:id="@+id/dialog_input_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:id="@+id/dialog_end_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10px"
        android:gravity="left"
        android:text="@string/ui_base_end"/>

    <EditText
        android:id="@+id/dialog_input_editText_end"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal"/>

    <LinearLayout
        android:id="@+id/dialog_input_btn_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/dialog_input_cancel_button"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/ui_base_backgroound_cancel"/>

        <Button
            android:id="@+id/dialog_input_sure_button"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_marginLeft="50dp"
            android:gravity="center"
            android:text="@string/ui_base_backgroound_ensure"/>

    </LinearLayout>
</LinearLayout>